Fixing the code !

--- a/MyApp_AR/static/reactIntegrationDemo/src/template.html
+++ b/MyApp_AR/static/reactIntegrationDemo/src/template.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
+  <!-- Titre de la page dynamiquement défini par htmlWebpackPlugin.options.title -->
   <title> htmlWebpackPlugin.options.title </title>
 
 </head>
 
 <body>
 
+  <!-- Point d'entrée pour l'application -->
   <div id="root"></div>
 
 </body>
