--- a/MyApp_AR/static/reactViteIntegrationDemo/index.html
+++ b/MyApp_AR/static/reactViteIntegrationDemo/index.html
@@ -1,17 +1,13 @@
 <!doctype html>
-<html lang="fr">
+<html lang="en">
   <head>
-    <!-- Métadonnées de base -->
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Titre de la page -->
-    <title>Démonstration d'intégration du widget Jeeliz VTO avec Vite/React</title>
+    <title>Jeeliz VTO widget Vite/React integration demo</title>
   </head>
   <body>
-    <!-- Point d'entrée pour l'application React -->
     <div id="root"></div>
-    <!-- Chargement du fichier JavaScript principal de l'application -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
